Add role: `sudo`

--- a/site.yml
+++ b/site.yml
@@ -7,5 +7,14 @@
     become: True
     become_method: su
 
-  roles:
-    - sudo
+  # roles:
+  #   - sudo
+
+  tasks:
+    - import_role:
+        name: sudo
+    - name: test sudo ping
+      block:
+        - debug: msg="Testing sudo ping"
+        - ping:
+      become: yes
