--- a/site.yml
+++ b/site.yml
@@ -1,13 +1,8 @@
 ---
 - hosts: localhost
-  pre_tasks:
-  - name: update package cache
-    pacman: update_cache=yes
-    changed_when: False
-    become: True
-    become_method: su
 
   roles:
+    - update_package_cache
     - sudo
     - colemak
 
