Add package: `stow`

--- a/roles/basic_setup/tasks/tasks.yml
+++ b/roles/basic_setup/tasks/tasks.yml
@@ -1,6 +1,11 @@
 ---
 - package:
-    name: binutils,fakeroot,hub,mercurial
+    name:
+      - binutils
+      - fakeroot
+      - hub
+      - mercurial
+      - stow
 
 - shell: timedatectl set-timezone Europe/Stockholm
 
