--- a/roles/colemak/tasks/main.yml
+++ b/roles/colemak/tasks/main.yml
@@ -2,7 +2,7 @@
   copy:
     src: "{{ item }}"
     dest: "{{ maps_dir }}"
-  with_fileglob: "{{ role_path }}/files/maps/*"
+  with_fileglob: "maps/*"
   become: yes
 
 - copy:
@@ -12,6 +12,5 @@
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
 - name: set active keymap
-  command:
-    cmd: loadkeys {{ maps_dir }}/colemak.map
+  command: loadkeys {{ maps_dir }}/colemak.map
   become: yes
