--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -19,6 +19,10 @@
         state: directory
 
     - file:
+        path: ~/.config/tmux
+        state: directory
+
+    - file:
         path: ~/.xmonad
         state: directory
 
