--- a/roles/basic_setup/tasks/tasks.yml
+++ b/roles/basic_setup/tasks/tasks.yml
@@ -8,9 +8,11 @@
       - git
       - htop
       - hub
+      - jq
       - lastpass-cli
       - mercurial
       - ncdu
+      - postgresql
       - python-pip
       - ripgrep
       - stow
@@ -43,6 +45,7 @@
           - fd
           - openssh
           - pkgfile
+          - postgresql-lib
           - the_silver_searcher
           - wget
 
@@ -65,6 +68,7 @@
           - direnv
           - fd-find
           - hostname
+          - postgresql-client
           - silversearcher-ag
 
     - apt:
