--- a/roles/basic_setup/tasks/tasks.yml
+++ b/roles/basic_setup/tasks/tasks.yml
@@ -45,7 +45,7 @@
           - fd
           - openssh
           - pkgfile
-          - postgresql-lib
+          - postgresql-libs
           - the_silver_searcher
           - wget
 
