Install pip package: `certifi`

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -38,3 +38,5 @@
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
   become: yes
   tags: emacs, x
+
+- pip: name=certifi
