--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -33,8 +33,8 @@
         chdir: ~/dotfiles
         cmd: sudo stow -t / nvidia
 
-    - command:
-        chdir: ~/dotfiles
-        cmd: sudo stow -t / ice1712
+    # - command:
+    #     chdir: ~/dotfiles
+    #     cmd: sudo stow -t / ice1712
 
   tags: [dotfiles]
