Add `libncurses-dev` for building Emacs

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -11,6 +11,7 @@
           - libgnutls28-dev
           - libgtk-3-dev
           - libjpeg-dev
+          - libncurses-dev
           - libtiff-dev
           - libxpm-dev
 
