Precreate `~/.local/bin` directory

--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -22,6 +22,10 @@
         state: directory
 
     - file:
+        path: ~/.local/bin
+        state: directory
+
+    - file:
         path: ~/.xmonad
         state: directory
 
