--- a/roles/x/tasks/main.yml
+++ b/roles/x/tasks/main.yml
@@ -8,6 +8,7 @@
           - lightdm-gtk-greeter
           - maim
           - redshift
+          - screenkey
           - scrot
           - unclutter
           - xclip
