--- a/roles/x/tasks/main.yml
+++ b/roles/x/tasks/main.yml
@@ -2,6 +2,7 @@
 - block:
     - package:
         name:
+          - dunst
           - feh
           - gnome-keyring
           - lightdm
@@ -18,6 +19,7 @@
 
     - package:
         name:
+          - libnotify
           - libsecret
           - slock
           - xf86-input-wacom
@@ -30,6 +32,7 @@
 
     - package:
         name:
+          - libnotify-bin
           - libsecret-1-0
           - libwacom-bin
           - libx11-dev
