Add `gvfs` to role `x`

--- a/roles/x/tasks/main.yml
+++ b/roles/x/tasks/main.yml
@@ -21,6 +21,7 @@
         name:
           - arc-gtk-theme
           - faba-icon-theme
+          - gvfs
           - libnotify
           - libsecret
           - slock
