Add tag: `gitconfig`

--- a/roles/git_config/tasks/main.yml
+++ b/roles/git_config/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
-- copy:
-    src: dot_gitconfig
-    dest: ~/.gitconfig
-    mode: 0600
+- name: copy .gitconfig
+  block:
+    - copy:
+        src: dot_gitconfig
+        dest: ~/.gitconfig
+        mode: 0600
+  tags: gitconfig
