--- a/roles/slack/tasks/main.yml
+++ b/roles/slack/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
-- aur: name=slack-desktop
+- kewlfft.aur.aur: name=slack-desktop
   tags: [x, x_apps]
   when: ansible_distribution == 'Archlinux'
