Update to V2 of `aws-cli`

--- a/roles/basic_setup/tasks/tasks.yml
+++ b/roles/basic_setup/tasks/tasks.yml
@@ -44,7 +44,7 @@
   block:
     - package:
         name:
-          - aws-cli
+          - aws-cli-v2-bin
           - base-devel
           - bat
           - bind
