fonts: Add `noto-fonts-emoji` package

--- a/roles/fonts/tasks/main.yml
+++ b/roles/fonts/tasks/main.yml
@@ -2,6 +2,7 @@
 - block:
     - package:
         name:
+          - noto-fonts-emoji
           - ttf-fira-code
           - ttf-liberation
       become: yes
